# picopadnion

./: 000.csv  001.csv  002.csv  003.csv  004.csv  005.csv  006.csv  007.csv  008.csv  CMakeLists.txt  README.md  picopadnion.cpp  picopanion.cpp  scale.py  song.h  songify.py  songs.xlsx  songxls.py  synth.cpp  synth.hpp
pictures/: picopanion.pptx
waveforms/: ONDES256.py
